# lang_det_test

./: .gitignore  Cargo.toml  LICENSE  README.md
c/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lang_det.h  m  main.cpp
rust_test/: Cargo.toml
rust_test/src/: lib.rs  lingua.rs  main.rs  record.rs  whichlang.rs
src/: lib.rs  lingua.rs
